# lockbench

./: .gitignore  CMakeLists.txt  EXPERIMENT.md  Handoff.md  LICENSE  README.md
asm_graviton/: cas_lock.s  cas_unlock.s  lock_asm.s  occ_read_begin.s  occ_read_validate.s  occ_write_lock.s  occ_write_unlock.s  rw_read_lock.s  rw_read_unlock.s  rw_write_lock.s  rw_write_unlock.s  tas_lock.s  tas_unlock.s  ticket_lock.s  ticket_unlock.s  ttas_lock.s  ttas_unlock.s
asm_xeon/: cas_lock.s  cas_unlock.s  lock_asm.s  occ_read_begin.s  occ_read_validate.s  occ_write_lock.s  occ_write_unlock.s  rw_read_lock.s  rw_read_unlock.s  rw_write_lock.s  rw_write_unlock.s  tas_lock.s  tas_unlock.s  ticket_lock.s  ticket_unlock.s  ttas_lock.s  ttas_unlock.s
bench/: array_bench.cpp  bptree_bench.cpp  cds_avl_bench.cpp  cds_avl_test.cpp  cds_bench.cpp  cds_test.cpp  index_bench.cpp  index_test.cpp  lock_asm.cpp  lock_test.cpp  main.cpp  skiplist_bench.cpp  wh_bench.cpp  wh_test.cpp
docs/: EXPERIMENT.md  INDEX_EXPERIMENT.md  INDEX_LOCK_DECISIONS.md  INVESTIGATION_PCPU_RW.md  SUPERVISOR_DECK_NOTES.md  SUPERVISOR_UPDATE_2026-05-11.md  WORMHOLE_ADAPTATION.md
include/indexes/: avl_tree_index.hpp  bptree_index.hpp  hash_index.hpp  skiplist_index.hpp  striped_map_index.hpp  wormhole_index.hpp
include/primitives/: cas_lock.hpp  occ.hpp  pcpu_rw_lock.hpp  pcpu_rw_lock_v2.hpp  rcu.hpp  rw_lock.hpp  tas_lock.hpp  ticket_lock.hpp  ttas_lock.hpp  util.hpp
include/util/: bench_harness.hpp  op_stream.hpp  zipfian.hpp
results/: analysis.ipynb  analysis_fixed_occ.ipynb  arm_server_lockbench.csv  arm_vs_x86_comparison.ipynb  arraybench_run1_arm.csv  arraybench_run1_x86.csv  arraybench_run2_arm.csv  arraybench_run2_x86.csv  combined_lockbench.csv  lockbench.csv  lockbench_duration_test.csv  lockbench_run1_arm.csv  lockbench_run1_x86.csv  lockbench_run2_arm.csv  lockbench_run2_x86.csv  optimized_arm_lockbench.csv  optimized_x86_lockbench.csv  presentation_notebook.ipynb  x86_fixed_occ.csv  x86_xeon_lockbench_new_rw_split.csv
results/aarch64/avl_compare/: cds_avl.agg.csv  cds_avl.csv
results/aarch64/cdsbench/: cdsbench.agg.csv  cdsbench.csv
results/aarch64/wh_compare/: wh.agg.csv  wh.csv
results/apple_m3/wh_compare/: wh.csv
results/archive/: arm_vs_x86_comparison.ipynb
results/arm64/wh_compare/: wh.agg.csv  wh.csv
results/avl_compare/: avl_compare.html  cds_avl.csv  cds_striped.csv
results/bptreebench/: bptreebench_graviton.csv  bptreebench_xeon.csv
results/cdsbench/: cdsbench.csv
results/deck/: 2026-05-11_cross_arch_findings.pptx  index_lock_evaluation.pptx  lockbench_progress.pptx  supervisor_review.pptx
results/graviton/avl_compare/: cds_avl.csv  cds_striped.csv
results/graviton/cdsbench/: cdsbench.csv
results/graviton/wh_compare/: wh.csv
results/lockbench/: arm_graviton_lockbench.csv  arm_xgene1_lockbench.csv  graviton_vs_xeon_notebook.ipynb  x86_xeon_lockbench.agg.csv  x86_xeon_lockbench.csv
results/quick_compare/: cds.csv
results/skiplistbench/: skiplistbench_graviton.csv  skiplistbench_xeon.csv
results/wh_compare/: wh.csv
results/x86_64/avl_compare/: cds_avl.agg.csv  cds_avl.csv
results/x86_64/cdsbench/: cdsbench.agg.csv  cdsbench.csv
results/x86_64/wh_compare/: wh.agg.csv  wh.csv
results/xeon/avl_compare/: cds_avl.csv  cds_striped.csv
results/xeon/cdsbench/: cdsbench.csv
results/xeon/wh_compare/: wh.csv
scripts/: _build_lockbench_analysis.py  aggregate.py  array_sweep.sh  avl_compare.ipynb  bptree_sweep.sh  build_cross_arch_deck.py  build_deck.py  build_index_lock_evaluation.py  build_ranking_figures.py  build_supervisor_deck.py  cds_sweep.sh  cross_arch.ipynb  extend_notebook.py  gen_asm.sh  index_cross_arch.ipynb  index_sweep.sh  lockbench_analysis.ipynb  plot_compare.py  plot_cross_arch.py  plot_wormhole.py  quick_compare.sh  run_all_sweeps.sh  run_avl_compare.sh  setup_cpu.sh  skiplist_sweep.sh  sweep.sh  sweep_common.sh  wh_compare.sh
